<resources>
    // Strings Globais
    <string name="app_name">App_Exercicios</string>
    <string name="nav_ex">Exercícios</string>
    <string name="nav_dados">Dados</string>
    <string name="exe_3">Exercício 3</string>
    <string name="exe_6">Exercício 6</string>

    // Description
    <string name="icon_home">Icone tela incial</string>
    <string name="icon_dados">Icone tela dados</string>
    <string name="img_exe3">Exercicio 3</string>
    <string name="img_exe6">Exercicio 6</string>

    // String Home
    <string name="rotulo_tela">Exercícios de Fixação</string>
    <string name="desc_exe3">Elaborar um programa que recebe o número de horas extras e o números de horas-falta em minutos de um funcionário. Apresente esses números em hora e o vaor do prêmio.”</string>
    <string name="desc_exe6">Faça um programa que leia o código dos itens pedidos e as quantidades desejadas. Ao escolher X, o pedido deverá ser finalizado. O programa calcula e mostra o valor total geral do pedido.</string>

    // Strings Exercício 3
    <string name= "extras"> Horas extras </string>
    <string name= "horasE"> Digite a quantidade de horas extras </string>
    <string name= "faltas"> Horas-faltas </string>
    <string name= "horasF"> Digite a quantidade de horas-falta </string>
    <string name= "verificar"> Verificar </string>
    <string name= "txtresult"> Resultado </string>
    <string name="premio_400">O prêmio é de R$400,00</string>
    <string name="premio_300">O prêmio é de R$300,00</string>
    <string name="premio_200">O Prêmio é de R$200,00</string>
    <string name="premio_100">O prêmio é de R$100,00</string>
    <string name="premio_500">O prêmio é de R$500,00</string>


    // Strings Exercicio 6
    <string name="escolha_cod">Escolha qual é o código do produto: </string>
    <string name="cod_a">C</string>
    <string name="cod_b">R</string>
    <string name="cod_c">S</string>
    <string name="quantidade">Digite a quantidade: </string>
    <string name="calcular">Calcular</string>

    // Strings Dados
    <string name="prog">Programadores</string>
    <string name="Marcos">Nome: Marcos Vinícius Barros Freire</string>
    <string name="Marina">Nome: Marina Oliveira Silva</string>
    <string name="turma">Turma: 2°DS</string>
    <string name="inst">Instituição</string>
    <string name="etec">Etec Prof° Basilides de Godoy</string>
    <string name="ori">Orientador</string>
    <string name="prof">Professora Aline Firmino Brito</string>
</resources>