<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Dados">

    <LinearLayout
        android:id="@+id/ll_navbar_dados"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="196.5dp"
            android:layout_height="match_parent"
            android:backgroundTintMode="screen"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/Dado_icon_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/icon_home"
                app:srcCompat="@drawable/icon_exercicios_red" />

            <TextView
                android:id="@+id/txt_home_dados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nav_ex"
                android:textColor="@color/red"
                android:textSize="20sp"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="196.5dp"
            android:layout_height="match_parent"
            android:background="@drawable/nav_fundo_dados"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/Home_txt_dados"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/nav_dados"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/Home_icon_dados"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/icon_dados"
                app:srcCompat="@drawable/icon_dados_white" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rotulo_dados"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/red"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnknownIdInLayout">

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_dados"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="695dp"
        android:foregroundGravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_navbar_dados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_rotulo_dados"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/txt_prog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/prog"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Marcos"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_name2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/Marina"
            android:textColor="@color/red"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_turma"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/turma"
            android:textColor="@color/yellow"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_prog5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/inst"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/etec"
            android:textColor="@color/yellow"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_prog7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/ori"
            android:textColor="@color/orange"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_name5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp"
            android:text="@string/prof"
            android:textColor="@color/yellow"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>