<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Exercicio_6">

    <LinearLayout
        android:id="@+id/ll_navbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_base">

        <LinearLayout
            android:layout_width="196.5dp"
            android:layout_height="match_parent"
            android:background="@drawable/nav_fundo_exercicios"
            android:backgroundTintMode="src_in"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/exe6_icon_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/icon_home"
                app:srcCompat="@drawable/icon_exercicios_white" />

            <TextView
                android:id="@+id/txt_home_exe6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nav_ex"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="196.5dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/txt_dados_exe6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/nav_dados"
                android:textColor="@color/red"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/exe6_icon_dados"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/icon_dados"
                app:srcCompat="@drawable/icon_dados_red" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_rotulo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/red"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll_base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exe_6"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_base"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_rotulo">

        <TextView
            android:id="@+id/txt_cod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/escolha_cod"
            android:textColor="@color/orange"
            android:textSize="16sp" />

        <RadioGroup
            android:id="@+id/rdg_cod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rdb_cod_c"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="@color/orange"
                android:text="@string/cod_a"
                android:textColor="@color/red"
                android:textColorHighlight="@color/yellow"
                android:textColorLink="@color/yellow" />

            <RadioButton
                android:id="@+id/rdb_cod_r"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cod_b"
                android:textColor="@color/red" />

            <RadioButton
                android:id="@+id/rdb_cod_s"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cod_c"
                android:textColor="@color/red" />

        </RadioGroup>

        <LinearLayout
            android:id="@+id/ll_qtd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_qtd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/quantidade"
                android:textColor="@color/red"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/editxt_qtd"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/yellow"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_calcular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="30dp"
            android:text="@string/calcular"
            android:textColor="@color/yellow" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>