<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Exercicio_1">

    <LinearLayout
        android:id="@+id/ll_rotulo_exe1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/ll_base"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exe_1"
            android:textSize="24sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_navbar_exe1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_base"
        tools:ignore="UnknownIdInLayout">

        <LinearLayout
            android:layout_width="196.5dp"
            android:layout_height="match_parent"
            android:background="#C12C2C"
            android:backgroundTintMode="screen"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/exe1_icon_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/icon_home" />

            <TextView
                android:id="@+id/txt_home_exe1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nav_ex"
                android:textColor="#000000"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="196.5dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:id="@+id/txt_dados_exe1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/nav_dados"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/icon_home_exe1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/icon_dados" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>