<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_horizontal"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_navbar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="621dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:background="#C12C2C"
            android:backgroundTintMode="screen"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/nav_ex"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="205dp"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="55dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:text="@string/nav_dados"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/icon_home"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:src="@tools:sample/avatars" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="409dp"
        android:layout_height="50dp"
        android:gravity="center|center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="1dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotulo_tela" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:foregroundGravity="center"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/ll_navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <HorizontalScrollView
            android:layout_width="300dp"
            android:layout_height="500dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="500dp"
                android:orientation="horizontal"
                tools:ignore="TextSizeCheck">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginEnd="50dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:ignore="TextSizeCheck">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="25dp"
                        android:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exe_1"
                        android:textSize="34sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="TextView" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    tools:ignore="TextSizeCheck">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_margin="25dp"
                        android:src="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exe_1"
                        android:textSize="34sp" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="TextView" />
                </LinearLayout>

            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>